--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smarter",
+  "name": "evoversion",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,8 +15,10 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
     "@react-navigation/stack": "^7.6.1",
-    "expo": "54.0.21",
+    "canvas": "^3.2.0",
+    "expo": "54.0.23",
     "expo-linear-gradient": "~15.0.7",
+    "expo-media-library": "~18.2.0",
     "expo-sensors": "~15.0.7",
     "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
@@ -25,7 +27,9 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-view-shot": "4.0.3"
   },
   "private": true
 }
