--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
     "@react-navigation/stack": "^7.6.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "canvas": "^3.2.0",
     "expo": "54.0.23",
     "expo-linear-gradient": "~15.0.7",
@@ -31,5 +32,8 @@
     "react-native-svg": "15.12.1",
     "react-native-view-shot": "4.0.3"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.7"
+  }
 }
