--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "EvoVersion",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "@assets/icon.png",
+    "icon": "./src/assets/icon.png",
     "plugins": ["expo-media-library"],
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "@assets/icon.png",
+      "image": "./src/assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,13 +18,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "@assets/icon.png",
+        "foregroundImage": "./src/assets/icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "favicon": "@assets/icon.png"
+      "favicon": "./src/assets/icon.png"
     }
   }
 }
